# startship-equations

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  highscores.txt  main.cpp
.github/workflows/: main.yml
data/: buffs.xml  levels.xml  npc.xml  weapons.xml
include/: Buff.h  Challenges.h  Combat.h  Condition.h  Enemy.h  FileLoader.h  GameProgression.h  HighScore.h  InteractNPC.h  InventoryManager.h  Level.h  MainMenu.h  NPC.h  Player.h  Reward.h  Scenarios.h  ShipManager.h  ShipMenu.h  Shop.h  Stage.h  TradeMenu.h  Utils.h  Weapon.h  test.h
src/: Buff.cpp  Challenges.cpp  Combat.cpp  FileLoader.cpp  GameProgression.cpp  Highscore.cpp  InteractNPC.cpp  InventoryManager.cpp  MainMenu.cpp  Player.cpp  Scenarios.cpp  ShipManager.cpp  ShipMenu.cpp  Shop.cpp  TradeMenu.cpp  Utils.cpp  main.cpp  test.cpp
